--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           class="search-city"
           id="search-city"
           required
-          size="75"
+          size="70"
         />
-        <input type="submit" value="Search" class="submit-button" size="40"/>
+        <input type="submit" value="Search" class="submit-button"/>
       </form>
     </header>
     <main>
@@ -32,9 +32,7 @@
         Humidity <span class="highlighted-units">64%</span> Wind <span class="highlighted-units">11km/h</span> </p>
         </div>
         <div class="main-degrees">
-            <span class="main-degrees-emoji">☀️</span>
-            <span class="main-degrees-value">22</span>
-            <span class="main-degrees-unit">°C</span>
+            <span class="main-degrees-emoji">☀️  </span><span class="main-degrees-value">22</span><span class="main-degrees-unit">°C</span>
         </div>
 </div>
     </main>
