cleaned up javascript code and format. Fixed bug so page loads with an active city

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class="main-temperature">
             <div>
-        <h1>Lisbon</h1>
+        <h1 id="new-city">Lisbon</h1>
         <p> <span id="day-time">Wednesday 11:43 </span> Sunny </br>
         Humidity <span class="highlighted-units">64%</span> Wind <span class="highlighted-units">11km/h</span> </p>
         </div>
