removed city and temperature on html so it loads on 'live' city

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <main>
         <div class="main-temperature">
             <div>
-        <h1 id="new-city">Lisbon</h1>
+        <h1 id="new-city"></h1>
         <p> <span id="day-time">Wednesday 11:43 </span> Sunny </br>
         Humidity <span class="highlighted-units">64%</span> Wind <span class="highlighted-units">11km/h</span> </p>
         </div>
         <div class="main-degrees">
-            <span class="main-degrees-emoji">☀️  </span><span class="main-degrees-value" id="main-degrees-value">22</span><span class="main-degrees-unit">°C</span>
+            <span class="main-degrees-emoji">☀️  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
         </div>
 </div>
     </main>
