updated all units including time using the API

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="main-temperature">
             <div>
         <h1 id="new-city"></h1>
-        <p> <span id="day-time">Wednesday 11:43 </span> Sunny </br>
-        Humidity <span class="highlighted-units">64%</span> Wind <span class="highlighted-units">11km/h</span> </p>
+        <p> <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
+        Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> </p>
         </div>
         <div class="main-degrees">
-            <span class="main-degrees-emoji">☀️  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
+            <span class="main-degrees-emoji" id="emoji">  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
         </div>
 </div>
     </main>
