added API icon to weather app

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> </p>
         </div>
         <div class="main-degrees">
-            <span class="main-degrees-emoji" id="emoji">  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
+            <span id="emoji">  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
         </div>
 </div>
     </main>
