Injected the HTML weather forecast from Javascript

--- a/index.html
+++ b/index.html
@@ -28,26 +28,15 @@
         <div class="main-temperature">
             <div>
         <h1 id="new-city"></h1>
-        <p> <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
+        <p> Last Updated <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
         Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> </p>
         </div>
         <div class="main-degrees">
             <span id="emoji">  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
         </div>
       </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Wed</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"> <span class ="forecast-bold">15°</span>/9°</div> </div>
-             <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Wed</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"><span class ="forecast-bold">15°</span>/9°</div> </div>
-             <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Thu</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"><span class ="forecast-bold">15°</span>/9°</div> </div>
-             <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Fri</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"><span class ="forecast-bold">15°</span>/9°</div> </div>
-             <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Sat</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"><span class ="forecast-bold">15°</span>/9°</div> </div>
-             <div class="weather-forecast-day"> 
-            <div class="weather-forecast-weekday">Tue</div> <div class="weather-forecast-emoji">☀️</div> <div class="weather-forecast-temperatures"><span class ="forecast-bold">15°</span>/9°</div> </div>
+        <div class="weather-forecast" id="forecast">
+        
         </div>
 
     </main>
