fully integrated API and updated various CSS

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <div class="main-temperature">
             <div>
         <h1 id="new-city"></h1>
-        <p> Last Updated <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
-        Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> </p>
+        <p> Last updated <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
+        Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> 
+    </p>
         </div>
         <div class="main-degrees">
             <span id="emoji">  </span><span class="main-degrees-value" id="main-degrees-value"></span><span class="main-degrees-unit">°C</span>
