updated netlify URL on footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="main-temperature">
             <div>
         <h1 id="new-city"></h1>
-        <p> Last updated <span id="day-time">Wednesday 11:43 </span> <span id="description"></span> </br>
+        <p> Last updated <span id="day-time">Wednesday 11:43 </span> <span class ="description" id="description"></span> </br>
         Humidity <span class="highlighted-units" id="humidity"></span> Wind <span class="highlighted-units" id="wind-speed"></span> 
     </p>
         </div>
@@ -42,7 +42,7 @@
 
     </main>
     <footer>
-        Coded by <a href="https://github.com/siv921"target="_blank">Anastasia</a>. Open sourced on <a href="https://github.com/siv921/weather-app.git"target="_blank">GitHub</a> and hosted on <a href="https://netlify.com" target="_blank">Netlify.</a>
+        Coded by <a href="https://github.com/siv921"target="_blank">Anastasia</a>. Open sourced on <a href="https://github.com/siv921/weather-app.git"target="_blank">GitHub</a> and hosted on <a href="https://asivets-weather-app.netlify.app/" target="_blank">Netlify.</a>
     </footer>
 </div>
 <script src="src/index.js"></script>
